manifests/gitops/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
  annotations:
    linkerd.io/inject: enabled
